# whispo

./: .tauriignore  CHANGELOG.md  CONTRIBUTING.md  MCP_INTEGRATION.md  README.md  SECURITY_AUDIT.md  TAURI_MIGRATION.md  package.json  vite.config.ts
docs/: README.md
docs/guides/: DEVELOPMENT.md  QUICK_START.md  SECURITY.md
docs/migration/: IMPLEMENTATION_COMPLETE.md  MISSING_FEATURES_FIXED.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  config.rs  keyboard.rs  main.rs  shortcuts.rs  state.rs  types.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs  tools.rs  types.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/src/: env.d.ts
src/renderer/src/lib/: tauri-client.ts  tipc-client.ts
